SERVER-28022 Invalidate old IDs for moved system.namespaces records

(cherry picked from commit b21ff4b1a89bf90a3cceee6961c75f8d10c733e6)

 Conflicts:
	src/mongo/db/storage/mmap_v1/catalog/namespace_details_collection_entry.cpp
	src/mongo/db/storage/mmap_v1/mmap_v1_database_catalog_entry.h