src/mongo/db/catalog/collection.cpp
@@ -632,4 +632,8 @@ Status Collection::touch(OperationContext* txn,
 
     return Status::OK();
 }
+
+UpdateNotifier* Collection::getUpdateNotifier() {
+    return this;
+}
 }
